--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,1 @@
-# _config.yml
-
-title: Yi Shien's Portfolio
-description: A portfolio showcasing Yi Shien's work and experiences in digital media.
-theme: minima
-plugins:
-  - jekyll-feed
+title: My Portfolio
